# CMakePackageWithTransitiveDependencies

./: README.md
LibB/: CMakeLists.txt
LibB/LibA/: CMakeLists.txt
LibB/LibA/cmake/: LibAConfig.cmake.in
LibB/LibA/src/: LibA.cpp  LibA.h
LibB/cmake/: LibBConfig.cmake.in
LibB/src/: LibB.cpp  LibB.h
MainExe/: CMakeLists.txt
MainExe/src/: main.cpp
